<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.example.movienager.ui.movie.list.MovieListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_movie_list" >

        <action
            android:id="@+id/action_navigation_movie_to_movieDetailsFragment"
            app:destination="@id/navigation_movie_details">
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.movienager.ui.dashboard.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/navigation_movie_details"
        android:name="com.example.movienager.ui.movie.show.MovieDetailsFragment"
        android:label="@string/title_movie_details"
        tools:layout="@layout/fragment_movie_details">

        <argument
            android:name="imdbId"
            app:argType="string"
            android:defaultValue="0"/>
    </fragment>

</navigation>